Correct Overlapping of Text on Work-Area

--- a/style.css
+++ b/style.css
@@ -480,7 +480,7 @@
 
   .container {
     background-image: url('images/header-bg.svg');
-    background-size: 90%;
+    background-size: contain;
     background-position-x: center;
     background-repeat: no-repeat;
     margin: 0 auto;
@@ -494,8 +494,8 @@
     width: 50%;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 15%;
-    margin-top: 5%;
+    margin-bottom: 5%;
+    margin-top: 1%;
   }
 
   .banner-content h1 {
@@ -543,7 +543,7 @@
   }
 
   .work-area {
-    width: 80%;
+    width: 90%;
     margin-left: auto;
     margin-right: auto;
   }
@@ -568,20 +568,23 @@
     flex-direction: column;
     padding-left: 10px;
     padding-bottom: 5%;
-    padding-top: -5%;
   }
 
   .work-head {
     font-size: 32px;
-    margin-top: -60px;
-    margin-left: 1%;
+    margin-top: -40px;
+    margin-left: 3%;
     margin-bottom: -13px;
+  }
+
+  .work-head h2 {
+    font-size: 28px;
   }
 
   .work-detail {
     display: flex;
     align-items: center;
-    margin-top: -40px;
+    margin-top: 4%;
     padding-left: 30px;
   }
 
@@ -605,15 +608,14 @@
   .work-description p {
     color: #344563;
     font-size: 16px;
-    margin-top: -50px;
+    margin-top: -0;
     padding-left: 30px;
   }
 
   .languages {
     justify-content: left;
     margin-left: 0;
-    margin-top: -50px;
-    margin-bottom: -3%;
+    margin-top: 2%;
   }
 
   .languages ul {
@@ -634,7 +636,7 @@
   .work-btn {
     margin-bottom: 25%;
     margin-left: 2%;
-    margin-top: -3%;
+    margin-top: 4%;
   }
 
   .my-detail {
